# arithmatoy-base

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  ZENON Christopher
.devcontainer/: docker-compose.yml
.devenv/: bash_init.sh  fish_init.fish
rendu/: AHO_Kevin.txt  AIT MANSSOUR_sufyan.txt  ARNAL_Camille.txt  AUBESSARD_clarence.txt  AZZOPARDI_oscar.txt  BELAID_myriam.txt  BENBOUALI_amine.txt  BIDART_valentin.txt  BIHR_georges-emile.txt  BOILLOUX_hugo.txt  BRONDELLE_maxence.txt  BUSY_raphael.txt  Buaud_Benjamin.txt  CARLIER_dimitri.txt  CAVARRETTA_joseph.txt  CERRILLO_Samuel.txt  CHALUMEAU_alexis.txt  CHEYNEL_baptiste.txt  CHIKI_selim.txt  COSNEFROY_yanis.txt  DEVIENNE_thomas.txt  DOE_john.txt  EL-FIKHI_brahim.txt  ELBAKRAOUI_salim.txt  ELKABOUSS_Hakim.txt  ESTELA_baptiste.txt  FERGANI_idris.txt  FERMAN_franck.txt  GAUCHER-KRIETE_toan.txt  GIRAUDEAU_David.txt  GOMEZ_oscar.txt  GRAND-BELLAPIANTA_emilien.txt  GWANULAGA_EvaristeKunsuna.txt  HIVER_matthieu.txt  JEANVOINE_Ludovic.txt  KAMIL_ben.txt  KRICH_Yassine.txt  KRIZOUA_israel.txt  LAINE_matthieu.txt  LEFEVRE_tom.txt  (+28 more)
src/: arithmatoy.c  hello_world.c  utils.h
src/include/: hello_world.h
src/tests/: test_hello_world.c
tests/: test_tp.py  tp.py
